infra/k8s/cerbos.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerbos
  labels:
    app: cerbos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cerbos
  template:
    metadata:
      labels:
        app: cerbos
    spec:
      containers:
        - name: cerbos
          image: ghcr.io/cerbos/cerbos:latest
          ports:
            - containerPort: 3592
              name: http
            - containerPort: 3593
              name: grpc
          args:
            - "server"
            - "--config=/config/config.yaml"
          volumeMounts:
            - name: cerbos-config
              mountPath: /config
            - name: cerbos-policies
              mountPath: /policies
      volumes:
        - name: cerbos-config
          configMap:
            name: cerbos-config
        - name: cerbos-policies
          configMap:
            name: cerbos-policies

---
apiVersion: v1
kind: Service
metadata:
  name: cerbos-service
spec:
  selector:
    app: cerbos
  ports:
    - name: http
      protocol: TCP
      port: 3592
      targetPort: http
    - name: grpc
      protocol: TCP
      port: 3593
      targetPort: grpc
