infra/k8s/jaeger.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  labels:
    app: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 16686
              name: ui
            - containerPort: 4317
              name: oltp-grpc
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
spec:
  selector:
    app: jaeger
  ports:
    - name: ui
      protocol: TCP
      port: 16686
      targetPort: ui
    - name: oltp-grpc
      protocol: TCP
      port: 4317
      targetPort: oltp-grpc
