infra/k8s/prometheus.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.console.libraries=/etc/prometheus/console_libraries"
            - "--web.console.templates=/etc/prometheus/consoles"
            - "--web.enable-lifecycle"
          volumeMounts:
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml
              subPath: config.yaml
            # - mountPath: /prometheus
            #   name: pv
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
        # - name: pv
        #   persistentVolumeClaim:
        #     claimName: prom-pvc

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: prom-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: ""
#   volumeName: prom-pv
#   resources:
#     requests:
#       storage: 1Gi
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: prom-pv
# spec:
#   accessModes:
#     - ReadWriteOnce
#   capacity:
#     storage: 5Gi
#   hostPath:
#     path: /data/prom-pv/

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
