infra/k8s/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-expenses
  labels:
    app: app-expenses
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-expenses
  template:
    metadata:
      labels:
        app: app-expenses
    spec:
      containers:
        - name: app-expenses
          image: ghcr.io/cerbos/demo-app-expenses:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: app-expenses-service
spec:
  type: LoadBalancer
  selector:
    app: app-expenses
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-expenses-service
                port:
                  number: 8000
          - path: /jaeger
            pathType: Prefix
            backend:
              service:
                name: jaeger-service
                port:
                  number: 16686

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
